update materialized configuration

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,4 +35,4 @@ models:
   zero_to_dbt:
     # Applies to all files under models/marts/
     marts:
-      materialized: table
+      +materialized: table
