--- a/models/staging/sample_data/_sample_data__models.yml
+++ b/models/staging/sample_data/_sample_data__models.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: stg__customers
+  - name: stg_sample_data__customers
     columns:
       - name: customer_key
         tests:
@@ -14,7 +14,7 @@ models:
       - name: market_segment
       - name: comment
 
-  - name: stg__line_items
+  - name: stg_sample_data__line_items
     columns:
       - name: order_key
         tests:
@@ -36,7 +36,7 @@ models:
       - name: ship_mode
       - name: comment
 
-  - name: stg__nations
+  - name: stg_sample_data__nations
     columns:
       - name: nation_key
         tests:
@@ -47,7 +47,7 @@ models:
       - name: comment
              
  
-  - name: stg__order
+  - name: stg_sample_data__orders
 
     columns:
       - name: order_key
@@ -68,7 +68,7 @@ models:
       - name: comment
 
   
-  - name: stg__regions
+  - name: stg_sample_data__regions
     columns:
       - name: region_key
         tests:
