--- a/models/staging/sample_data/_sample_data__models.yml
+++ b/models/staging/sample_data/_sample_data__models.yml
@@ -73,7 +73,7 @@ models:
         tests:
           - unique
           - not_null
-      - name: name
+      - name: region_name
         tests:
           - accepted_values:
               values: ['AFRICA','MIDDLE EAST','ASIA','AMERICA']
