adding comments to show where to copy-paste things in

--- a/models/staging/sample_data/_sample_data__sources.yml
+++ b/models/staging/sample_data/_sample_data__sources.yml
@@ -9,4 +9,5 @@ sources:
       - name: lineitem
       - name: nation
       - name: orders
+# add source freshness to the orders table here
       - name: region
