added 'europe' field to accepted values tests (we're getting rid of that portion in the testing section)

--- a/models/marts/models.yml
+++ b/models/marts/models.yml
@@ -10,7 +10,7 @@ models:
       - name: region
         tests:
           - accepted_values:
-              values: ['AFRICA','MIDDLE EAST','ASIA','AMERICA']
+              values: ['AFRICA','MIDDLE EAST','ASIA','AMERICA', 'EUROPE']
               severity: warn
       - name: name
       - name: address
