fixed region name field
region field was called 'region' instead of 'region_name'

--- a/models/marts/models.yml
+++ b/models/marts/models.yml
@@ -7,7 +7,7 @@ models:
         tests:
           - unique
           - not_null
-      - name: region
+      - name: region_name
         tests:
           - accepted_values:
               values: ['AFRICA','MIDDLE EAST','ASIA','AMERICA', 'EUROPE']
