added names of primary key columns to sources yaml. will make adding generic tests in tests section of course easier.

--- a/models/staging/sample_data/_sample_data__sources.yml
+++ b/models/staging/sample_data/_sample_data__sources.yml
@@ -6,11 +6,19 @@ sources:
     schema: TPCH_SF1
     tables:
       - name: customer
+        columns: 
+          - name: c_custkey
       - name: lineitem
       - name: nation
+        columns:
+          - name: n_nationkey
       - name: orders
+        columns:
+          - name: o_orderkey
         loaded_at_field: "CAST(o_orderdate AS TIMESTAMP)"
         freshness:
           warn_after: {count: 1, period: day}
           error_after: {count: 2, period: day}
       - name: region
+        columns:	
+          - name: r_regionkey
